transition to reading config file

--- a/webauth/templates/login.html
+++ b/webauth/templates/login.html
@@ -24,7 +24,7 @@
 <h1 style="text-align: center;color:red;">Login Failed</h1>
 {{end}}
 <div style="width: 100%">
-    <img src="img/Alliant_energy_logo.jpg" style="display: block;margin: auto; height: 30%">
+    <img src="static/Alliant_energy_logo.jpg" style="display: block;margin: auto; height: 30%">
 </div>
 <form action="/login/" method="POST" style="width:100%;margin-top: 2em">
     <div style="width: 50%; margin:auto;text-align: center;padding-bottom: 2em;border: solid black;border-radius: 1em">
