--- a/templates/login.html
+++ b/templates/login.html
@@ -29,9 +29,9 @@
 <form action="/login/" method="POST" style="width:100%;margin-top: 2em">
     <div style="width: 50%; margin:auto;text-align: center;padding-bottom: 2em;border: solid black;border-radius: 1em">
         <label for="username" style="display: block;margin-top:1.5em">Username</label>
-        <input type="text" id="username" style="display: block; margin:auto">
+        <input type="text" name="username" id="username" style="display: block; margin:auto">
         <label for="password" style="display: block;">Password</label>
-        <input type="text" id="password" style="display: block;margin:auto;margin-bottom: 1em">
+        <input type="text" name="password" id="password" style="display: block;margin:auto;margin-bottom: 1em">
         <button style="margin: auto; min-height: 2em; min-width:4em;
         background-color: #EFDD02;border: outset;border-radius: 1em;">Login
         </button>
